--- a/src/css/Cena&Viaje.css
+++ b/src/css/Cena&Viaje.css
@@ -103,6 +103,10 @@
     margin-bottom: 10px;
 }
 
+.textContainer {
+    font-size: 1rem;
+}
+
 #org-conteiner {
     text-align: left;
     padding-left: 50px;
