--- a/src/css/Acerca.css
+++ b/src/css/Acerca.css
@@ -124,10 +124,11 @@ transform: translate(-50%, -50%);
     background-color: white;
 }
 #seccion2{
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+   display: grid;
+   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+   gap: 30px;
+   padding: 20px;
+  justify-items: center;
     
 }
 #h2{
@@ -158,3 +159,29 @@ transform: translate(-50%, -50%);
     color: purple;
 }
 
+@media(max-width: 600px){
+    .acomodar{
+        grid-template-columns: 1fr;
+    }
+    .envase{
+max-width: 100%;
+width: 100%;
+    }
+    .photos{
+      aspect-ratio: auto;
+    }
+    .titulo{
+        font-size: 1.5em;
+    }
+    #seccion2{
+        flex-direction: column;
+        gap: 20px;
+    }
+    #seccion2 ul{
+        width: 100%;
+        text-align: center;
+    }
+    #h2{
+        width: 90%;
+    }
+}
