--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,25 @@
+/* Estilos globales */
 body,
 html {
     height: 100%;
     padding: 0;
     margin: 0;
+    font-family: Arial, sans-serif;
+    transition: background-color 0.4s ease, color 0.4s ease;
 }
 
 /* Configuración responsive para la página de contacto */
+@media (max-width: 1366px) {
+
+    #form {
+        font-size: 15px;
+    }
+
+    .subtitle {
+        font-size: 28px;
+    }
+}
+
 @media (max-width: 950px) {
 
     #container {
@@ -353,6 +367,20 @@ html {
     }
 
     .bienvenida p {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 1366px) {
+
+    .tripSet,
+    .tripSet::before {
+        width: 400px;
+    }
+
+    .americaTrip p,
+    .europeTrip p,
+    .oceaniaTrip p {
         font-size: 14px;
     }
 }
