--- a/src/css/Formularios.css
+++ b/src/css/Formularios.css
@@ -1,9 +1,3 @@
-/*    Colores:
-Azul: #1B2A41
-Blanco. #F5FBEF
-Dorado: #e3c16f
-Celeste: #0d324d
-*/
 .alinear {
     display: flex;
     justify-content: center;
@@ -22,6 +16,9 @@ Celeste: #0d324d
     gap: 10px;
     background-color: #1b2a41;
     padding: 5px;
+    max-width: 600px;
+    width: 100%;
+    box-sizing: border-box;
 
 }
 
@@ -102,4 +99,43 @@ select>option {
 
 .ul>li {
     margin: 5px;
+}
+
+@media(max-width: 600px) {
+    .Formulario {
+        width: 90%;
+        font-size: 16px;
+        border-width: 4px;
+    }
+
+    .field {
+        width: 100%;
+        padding: 5px;
+        border-width: 3px;
+    }
+
+    .color,
+    input,
+    select,
+    #t {
+        width: 100%;
+        margin: 5px 0;
+    }
+
+    .envio {
+        width: 100%;
+        height: 2.2em;
+        font-size: 18px;
+    }
+
+    .indicar>p {
+        height: auto;
+        padding: 8px;
+        font-size: 16px;
+    }
+
+    .ul {
+        font-size: 16px;
+        padding: 0 10px;
+    }
 }
