--- a/src/css/ModoOscuro.css
+++ b/src/css/ModoOscuro.css
@@ -1,13 +1,3 @@
-/* Estilos globales */
-body,
-html {
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    font-family: Arial, sans-serif;
-    transition: background-color 0.4s ease, color 0.4s ease;
-}
-
 /* Modo oscuro */
 body.dark {
     background-color: #000000;
@@ -123,11 +113,8 @@ body.light .complete:focus {
 
 /* Botón modo oscuro */
 .theme-toggle-container {
-    position: fixed;
-    transform: translateY(60px);
-    top: 1rem;
-    right: 1rem;
-    z-index: 50;
+    position: absolute;
+    transform: translateY(-2px);
 }
 
 .theme-toggle {
@@ -139,5 +126,26 @@ body.light .complete:focus {
 }
 
 .theme-toggle:hover {
-    transform: rotate(90deg) scale(1.4);
+    transform: rotate(50deg) scale(1.2);
+}
+
+/*Iconos*/
+.iconoMO svg {
+    width: 26px;
+    height: 26px;
+}
+
+body.dark .iconoMO svg path {
+    fill: #E3C16F !important;
+}
+
+body.light .iconoMO svg path {
+    fill: #E3C16F !important;
+}
+
+/*flechas del carrusel*/
+
+.botones svg {
+    width: 40px;
+    height: 40px;
 }
