--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -10,10 +10,9 @@
     justify-content: flex-end;
  }
 
- .navbar-link {
-    color: white;
+ .navbar-link,
+ .modo-oscuro-container {
     padding: 10px;
-    text-decoration: none;
  }
 
  .navbar-link:hover {
@@ -22,9 +21,10 @@
  }
 
  .navbar-links {
+    text-decoration: none;
     display: flex;
-    gap: 10px;
-    margin-right: 20px;
+    gap: 8px;
+    margin-right: 30px;
  }
 
  .minibar-box {
@@ -46,12 +46,17 @@
  }
 
  /* Estilos del menú desplegable */
- .menu a {
+ .menu a,
+ .menu .modo-oscuro-desplegable {
     text-decoration: none;
     padding: 10px;
     display: flex;
     align-items: center;
     gap: 8px;
+ }
+
+ .modo-oscuro-desplegable {
+    transform: translateX(-25px);
  }
 
  .menu {
