--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
 /* Estilos globales */
+* {
+    color: #E3C16F;
+    font-family: Arial, sans-serif;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+}
+
 body,
 html {
     height: 100%;
@@ -175,6 +182,19 @@ html {
 }
 
 @media (max-width: 700px) {
+    .iconoMO {
+        display: none;
+    }
+
+    .iconoMOH {
+        position: absolute;
+        display: flex;
+        gap: 8px;
+        font-size: 1rem;
+        align-items: center;
+        transform: translate(-70px, -6px);
+    }
+
     .navbar-links {
         display: none
     }
