--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -46,26 +46,22 @@
  }
 
  /* Estilos del menú desplegable */
- .menu a,
+ .menu>a,
  .menu .modo-oscuro-desplegable {
     text-decoration: none;
-    padding: 10px;
     display: flex;
     align-items: center;
+    padding: 4px;
     gap: 8px;
  }
 
- .modo-oscuro-desplegable {
-    transform: translateX(-25px);
- }
-
  .menu {
-    position: absolute;
+    position: relative;
     top: 60px;
+    height: 180px;
+    width: 150px;
     left: auto;
-    right: 0;
     display: none;
-    /* Evitamos que se muestre en pantallas normales */
     flex-direction: column;
     background-color: #1B2A41;
     padding: 10px;
